--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>17</maven.compiler.source>
+     <maven.compiler.target>17</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -22,4 +24,6 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <mainClass>com.mavenproject10
 </project>
